Fixed the issue where path browser is hidden by main section on safari, reported in 278 Issue on GitHub (#279)

--- a/admin-base/materialize/custom/_workspace.scss
+++ b/admin-base/materialize/custom/_workspace.scss
@@ -203,7 +203,6 @@
 		-moz-transition: width .2s ease-in-out;
 		-ms-transition: width .2s ease-in-out;
 		transition: width .2s ease-in-out;
-		z-index: 0;
 		background-color: color("blue-grey", "lighten-5");
 		border-left: 1px solid color("blue-grey", "lighten-4");
 		.hide-right-panel {
